[tool.poetry]
name = "pii-data-detection"
version = "0.1.0"
description = "Training and inference code for pii detection"
authors = ["Satwik Kambham <satwik.kambham@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
